--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
 # Ignore files for push...
 
+.gitignore
 .idea/
 venv/
 # HydroGeoZone/Output
-HydroGeoZone/Data/Drenaje_Sencillo.shp
-HydroGeoZone/Data/Drenaje_Sencillo.dbf
-HydroGeoZone/Output/DrenajeSencilloIntersect.shp
-HydroGeoZone/Output/DrenajeSencilloIntersect.dbf
+HydroGeoZone/Data/Drenaje_Sencillo.*
+HydroGeoZone/Output/DrenajeSencilloIntersect.*
 
 # Some samples
 # http://git-scm.com/book/en/v2/Git-Basics-Recording-Changes-to-the-Repository#Ignoring-Files
