--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,22 @@
 # Ignore files for push...
 
+# General exclusions
 .gitignore
 .idea/
 venv/
 
-# Exclusion for D:\R.GISPython\HydroGeoZone\Data
+# Exclusion for D:\R.GISPython\HydroGeoZone
 # Excluded because the files sizes are more than 100MB
 # Drenaje_Sencillo layer compress in 95MB files parts as DrenajeSencilloDownload.part1.rar to .part4
 # HydroGeoZone/Output/
 HydroGeoZone/Data/Drenaje_Sencillo.*
 HydroGeoZone/Output/DrenajeSencilloIntersect.*
 HydroGeoZone/Output/DrenajeSencilloFiltro.*
+
+# Exclusion for D:\R.GISPython\TableInterpolatedGrid
+TableInterpolatedGrid/OutputColorMap/
+TableInterpolatedGrid/OutputGrid/
+
 
 # Some samples
 # http://git-scm.com/book/en/v2/Git-Basics-Recording-Changes-to-the-Repository#Ignoring-Files
