--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ TableInterpolatedGrid/OutputGrid/
 
 # Exlcusion for large files
 UnpivotTable/*.csv
-MultipleTableJoin/*.csv
+#MultipleTableJoin/*.csv
 
 
 # Some samples
