--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 # .gitignore
 .idea/
 venv/
+.venvPython311/
 
 # Exclusion for D:\R.GISPython\HydroGeoZone
 # Excluded because the files sizes are more than 100MB
