--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 .idea/
 venv/
 .venvPython311/
+.venvPython310/
 
 # Exclusion for D:\R.GISPython\HydroGeoZone
 # Excluded because the files sizes are more than 100MB
