--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ TableInterpolatedGrid/OutputGrid/
 # Exlcusion for large files
 UnpivotTable/*.csv
 MultipleTableJoin/*.csv
-
+MultipleTableJoin/EAB_CO/eab_sih_monthly_records.csv
 
 # Some samples
 # http://git-scm.com/book/en/v2/Git-Basics-Recording-Changes-to-the-Repository#Ignoring-Files
