--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ venv/
 .venvPython310/
 .venvPython311/
 GISMobile/EAB_CO/GDB.gdb
+GISMobile/EAB_CO/ArcGISPro
+
 
 # Exclusion for D:\R.GISPython\HydroGeoZone
 # HydroGeoZone/Output/
