--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ venv/
 .venvPython310/
 .venvPython311/
 GISMobile/GISMobile_EAB_CO/GDB.gdb
-GISMobile/GISMobile_EAB_CO/dem/AlosPalsarZE.tif*
+GISMobile/GISMobile_EAB_CO/dem/AlosPalsarZE*.tif*
 
 
 
