--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 vaex~=4.16.0
 sqlalchemy==1.4.47
-pandas~=1.5.3
+pandas
+# pandas~=1.5.3
 matplotlib~=3.7.1
-numpy~=1.23.5
+numpy
+# numpy~=1.23.5
 missingno~=0.5.2
 tabulate~=0.9.0
 scikit-learn~=1.2.2
@@ -17,3 +19,4 @@ openpyxl~=3.1.2
 pyodbc~=4.0.39
 sodapy~=2.2.0
 xlrd~=2.0.1
+scipy
